Updated Bubble Scripts

--- a/Builds/MPI/Bubble/CMakeLists.txt
+++ b/Builds/MPI/Bubble/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(MPI REQUIRED)
 find_package(caliper REQUIRED)
 find_package(adiak REQUIRED)
 
-add_executable(MPI_quicksort MPI_quicksort.cpp)
+add_executable(bubble bubble.cpp)
 
 message(STATUS "MPI includes : ${MPI_INCLUDE_PATH}")
 message(STATUS "Caliper includes : ${caliper_INCLUDE_DIR}")
@@ -13,5 +13,5 @@ include_directories(SYSTEM ${MPI_INCLUDE_PATH})
 include_directories(${caliper_INCLUDE_DIR})
 include_directories(${adiak_INCLUDE_DIRS})
 
-target_link_libraries(MPI_quicksort PRIVATE MPI::MPI_CXX)
-target_link_libraries(MPI_quicksort PRIVATE caliper)
+target_link_libraries(bubble PRIVATE MPI::MPI_CXX)
+target_link_libraries(bubble PRIVATE caliper)
